# Leopard

./: .gitignore  CMakeLists.txt  README.md  devLog.md  locomotion_swingkp0.54kd0.0001_standkp1.8kd0.02.txt  四足导航机器狗开发记录.md
common/include/: cppTypes.h
config/: default-user-parameters-file.yaml  initial_jpos_ctrl.yaml  leopard-robotParam-default.yaml  leopard-userParam-default.yaml  mc-mit-ctrl-user-parameters.yaml
lcm-types/: usb_command_t.lcm  usb_data_t.lcm  usb_torque_t.lcm
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
scripts/: find_qt_path.sh  make_types.sh
scripts/lcm-log2smat/: CMakeLists.txt
sim/: CMakeLists.txt
sim/include/: DrawList.h  Graphics3D.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  (+4 more)
user/: CMakeLists.txt
user/TJU_Contorller/: CMakeLists.txt  TJU_Controller.cpp  TJU_Controller.hpp  TJU_UserParameters.hpp  main.cpp
user/TJU_Contorller/Controllers/WBC/WBIC/: KinWBC.cpp  WBIC.cpp
user/TJU_Contorller/Controllers/WBC_Ctrl/: WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/TJU_Contorller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
user/TJU_Contorller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
user/TJU_Contorller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h  FSM_State_SitDown.cpp  FSM_State_SitDown.h  FSM_State_StandUp.h  FSM_State_Standup.cpp  SafetyChecker.cpp
(+28 files in other folders)
